--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.15.3",
     "body-parser": "~1.0.1",
-    "express": "~4.0.0",
-  },
-  "engines": {
-    "node": "v4.1.1"
+    "express": "~4.0.0"
   }
 }
